chore(test): run test executing actual requests to integration test suite